--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <header>
             <h1>商品销售系统</h1>
             <p>选择商品并完成销售记录</p>
-            <button id="logoutBtn" class="logout-btn">退出登录</button>
+            <div class="login-info">
+                <span id="loginStatus" class="login-status">已登录</span>
+                <button id="logoutBtn" class="logout-btn">退出登录</button>
+            </div>
         </header>
 
         <main>
