fix display Bug

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 <div class="action-buttons">
                     <button id="exportBtn" class="export-btn">导出CSV</button>
                     <button id="resetBtn" class="reset-btn">重置数据</button>
+                    <button id="testBtn" class="test-btn">测试数据</button>
                 </div>
             </div>
         </main>
