update csv  for sanity

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div id="paymentModal" class="modal">
                 <div class="modal-content">
                     <span class="close">&times;</span>
-                    <h2 id="selectedProduct">选择支付方式</h2>
+                    <h2 id="selectedProduct">payment method</h2>
                     <div class="payment-options">
                         <button class="payment-btn paypal-btn" data-method="paypal">
                             <span class="payment-icon">💳</span>
