--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
                         <h3>Keychain</h3>
                         <p>PayPal: $6 | Cash: $5</p>
                     </button>
+                    
+                    <button class="product-btn" data-product="fursuit head base" data-paypal-price="100" data-cash-price="80">
+                        <h3>Fursuit Head Base</h3>
+                        <p>PayPal: $100 | Cash: $80</p>
+                    </button>
+                    
+                    <button class="product-btn" data-product="fursuit ear" data-paypal-price="35" data-cash-price="30">
+                        <h3>Fursuit Ear</h3>
+                        <p>PayPal: $35 | Cash: $30</p>
+                    </button>
                 </div>
             </div>
 
