add withdraw func

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     <!-- Sales records will be displayed here -->
                 </div>
                 <div class="action-buttons">
+                    <button id="undoBtn" class="undo-btn">↩️ Undo Last Sale</button>
                     <button id="exportBtn" class="export-btn">Export CSV</button>
                     <button id="syncBtn" class="sync-btn">GitHub Sync</button>
                     <button id="resetBtn" class="reset-btn">Reset Data</button>
